<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayColor"
    android:orientation="vertical" >
    
    <!-- title bar -->
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/titlebarColor"
	    android:orientation="horizontal"
	    >
	    
        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:textSize="@dimen/titleSize"
            android:layout_alignParentLeft="true" 
            android:layout_centerVertical="true"
            />
        
        <TextView
            android:text="@string/cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleFontColor"
            android:textSize="@dimen/titleSize"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerInParent="true"
            />
        
	</RelativeLayout>
	
    <!-- seperate line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grayFontColor"
        >
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            
		    <!-- header -->
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="40dp"
		        android:paddingLeft="@dimen/headerPaddingLeft"
		        android:paddingBottom="5dp"
		        android:text="@string/face_style"
		        android:textSize="@dimen/headerFontSize"
		        android:textColor="@color/headerFontColor"
		        />
		    
		    <!-- seperate line -->
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/seplineheight"
		        android:background="@color/grayFontColor"
		        >
		    </LinearLayout>
		    
		    <!-- cell -->
		    <RelativeLayout
		        android:id="@+id/row_face_standard"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/row"
			    android:orientation="horizontal"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="20dp"
		        >
		        
		        <ImageView
		            android:id="@+id/img_face_standard"
			        android:layout_width="35dp"
			        android:layout_height="35dp"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:src="@drawable/setting_face_standard"
			        >
			    </ImageView>
		        
		        <TextView
		            android:text="@string/standard"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/rowFontColor"
		            android:textSize="@dimen/titleSize"
		            android:padding="10dp"
		            android:layout_marginLeft="40dp"
		            android:layout_alignLeft="@id/img_face_standard"
		            />
		        
		        <ImageView
		            android:id="@+id/check_face_standard"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/check_on"
		            android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:paddingRight="15dp"
		            />
		        
		    </RelativeLayout>
		    
		    <!-- inner seperate line -->
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        >
		        
		        <ImageView
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_marginLeft="10dp"
			        android:background="@color/grayFontColor"
			        />
		    	
		    </LinearLayout>
		    
		    <RelativeLayout
		        android:id="@+id/row_face_classic"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/row"
			    android:orientation="horizontal"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="20dp"
		        >
		        
		        <ImageView
		            android:id="@+id/img_face_classic"
			        android:layout_width="35dp"
			        android:layout_height="35dp"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:src="@drawable/setting_face_classic"
			        >
			    </ImageView>
			    
		        <TextView
		            android:text="@string/classic"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/rowFontColor"
		            android:textSize="@dimen/titleSize"
		            android:padding="10dp"
		            android:layout_marginLeft="40dp"
		            android:layout_alignLeft="@id/img_face_classic"
		            />
		        
		        <ImageView
		            android:id="@+id/check_face_classic"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/check_on"
		            android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:paddingRight="15dp"
		            />
		        
		    </RelativeLayout>
		    
		    <!-- seperate line -->
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:background="@color/grayFontColor"
		        android:orientation="horizontal"
		        android:visibility="gone"
		        >
		    </LinearLayout>
		    
		    <!-- card back style -->
		    <!-- header -->
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="40dp"
		        android:paddingLeft="@dimen/headerPaddingLeft"
		        android:paddingBottom="5dp"
		        android:text="@string/back_style"
		        android:textSize="@dimen/headerFontSize"
		        android:textColor="@color/headerFontColor"
		        />
		    
		    <!-- seperate line -->
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/seplineheight"
		        android:background="@color/grayFontColor"
		        >
		    </LinearLayout>
		    
		    <!-- cell -->
		    <RelativeLayout
		        android:id="@+id/row_back_standard"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/row"
			    android:orientation="horizontal"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="20dp"
		        >
		        
		        <ImageView
		            android:id="@+id/img_back_standard"
			        android:layout_width="35dp"
			        android:layout_height="35dp"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:src="@drawable/setting_back_standard"
			        >
			    </ImageView>
		        
		        <TextView
		            android:text="@string/standard_blue"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/rowFontColor"
		            android:textSize="@dimen/titleSize"
		            android:padding="10dp"
		            android:layout_marginLeft="40dp"
		            android:layout_alignLeft="@id/img_back_standard"
		            />
		        
		        <ImageView
		            android:id="@+id/check_back_standard"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/check_on"
		            android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:paddingRight="15dp"
		            />
		        
		    </RelativeLayout>
		    
		    <!-- inner seperate line -->
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        >
		        
		        <ImageView
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:layout_marginLeft="10dp"
			        android:background="@color/grayFontColor"
			        />
		    	
		    </LinearLayout>
		    
		    <RelativeLayout
		        android:id="@+id/row_back_classic"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/row"
			    android:orientation="horizontal"
			    android:paddingTop="5dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="20dp"
		        >
		        
		        <ImageView
		            android:id="@+id/img_back_classic"
			        android:layout_width="35dp"
			        android:layout_height="35dp"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:src="@drawable/setting_back_classic"
			        >
			    </ImageView>
			    
		        <TextView
		            android:text="@string/classic_blue"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/rowFontColor"
		            android:textSize="@dimen/titleSize"
		            android:padding="10dp"
		            android:layout_marginLeft="40dp"
		            android:layout_alignLeft="@id/img_back_classic"
		            />
		        
		        <ImageView
		            android:id="@+id/check_back_classic"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/check_on"
		            android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:paddingRight="15dp"
		            />
		        
		    </RelativeLayout>
		    
		    <!-- seperate line -->
		    <LinearLayout
		        android:id="@+id/sepline_cumulative"
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:background="@color/grayFontColor"
		        android:orientation="horizontal"
		        android:visibility="gone"
		        >
		    </LinearLayout>
		    
	    </LinearLayout>
    </ScrollView>
</LinearLayout>
