<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dlg_back_color"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        
        >

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_wallpaper"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/dialog_title_size"
            android:textStyle="bold" />
        
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/confirm_dlg_header_line_height"
        android:background="@color/confirm_dlg_header_line_color" />

    <RelativeLayout
        android:id="@+id/lyt_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/row_selector"
        >

        <TextView
            android:id="@+id/txt_mn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/album"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/dialog_content_size" />
        
    </RelativeLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="25dp"
        android:background="@color/friend_option_menu_list_divide_color" />

    <RelativeLayout
        android:id="@+id/lyt_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/row_selector"
        >

        <TextView
            android:id="@+id/txt_kp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/camera"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/dialog_content_size" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/row_selector"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Cancel"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/dialog_content_size" />
        
    </RelativeLayout>

</LinearLayout>